@@ -26,7 +26,16 @@
 
       
 [Etc]:
-  + [Running Program in Terminal]
+  //Note the commands below are written for Windows OS (Command Prompt), hence the "/"
+  //  For Unix users, use "\" for file path to Java SDK's lib
+
+  + [Run Program from Objects created in 'bin' {Easiest way to run program!}]
+
+    //Run the executable
+      java --module-path "/path/to/javafx-sdk-22.0.1/lib" --add-modules javafx.controls,javafx.fxml Main
+
+
+  + [Running Program in Terminal, compiling from .java files in 'src']
 
     //Compile/Build Object
       javac --module-path "/path/to/javafx-sdk-22.0.1/lib" --add-modules javafx.controls,javafx.fxml Main.java
@@ -41,44 +50,6 @@
     
   [NOTE] Change VM argument(s) via: 'Run Configurations' under 'Run as' in Eclipse
 *********************************************************************************************************/
-
-
-/* [TO DO]:
-  	 
-  	 - [6/19/24]:
-  	
-		[Functional requirements]
-
-		+ NOTES THAT ARE RANDOM BUT I NEED TO WRITE DOWN
-		  
-		  For the [Create account button] when it is pressed remove the objects from the scene using 
-		  .getChildren.remove() related to logging in and then .getChildren.add() new/more text boxes 
-		  for Insurance, Contact info, etc.
-		
-
-		[Non-functional requirements]
-
-	 	+ You might have to make the LoginPage and Create account Page separate pages?
-		  [That way patient can enter insurance info, contact number, etc.]
-		  
-*/
-
-
-/*[Side Notes]
- *	This is the boiler-plate code for your CSSE-360 SU24 Project "Arizona Medical"
- * 
- *  [Programming Notes]:	
- *  	- Make "Start page" be in "Main" / the driver
- *  
- *  	- For your Objects/Classes use inheritance when possible! 
- *  
- *  	- Use data types such as public and private to protect data!
- * 
- *  
- *  	- Load patient Names & DOB from a .txt document and put said patients data into a
- *  	  String[] Array named 'allPatients' (Set DEFAULT_CAPACITY to 5 patients?)
- *  	  This string array 'allPatients' will be used in our CheckBox (dropdown menu) 
-*/
 
 
 //Relevant JavaFX imports for our GUI
